# keel

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  PROVIDERS.md  README.md  ROADMAP.md  SPEC-AMENDMENT-1.md  SPEC-AMENDMENT-2.md  SPEC-AMENDMENT-3.md  SPEC-AMENDMENT-4.md  SPEC-MICROCLOUD.md  SPEC.md  VISION.md  rl-6.body  status.md
.github/workflows/: ci.yml  release.yml
apps/hello/: Cargo.toml  Trunk.toml  index.html
apps/hello/src/: main.rs
core/: Cargo.toml
core/examples/: embedded.rs
core/src/: db.rs  function.rs  host.rs  journal.rs  judge.rs  lib.rs  notifier.rs  provider.rs  proxy.rs  runner.rs  sandbox.rs  secrets.rs
core/tests/: embedded.rs
docs/: api.md  guests.md  operations.md
docs/deploy/: Dockerfile  compose.yml  k8s.yaml  keel.service
engine/: Cargo.toml  build.rs
engine/assets/: style.css
engine/src/: api.rs  auth.rs  client.rs  cron.rs  db.rs  dispatch.rs  fleet.rs  host.rs  journal.rs  main.rs  notifier.rs  runner.rs  ui.rs
engine/templates/: _log_lines.html  _schedules_table.html  _submissions_table.html  _usage_table.html  _workflow_detail.html  _workflows_table.html  apps.html  dashboard.html  login.html  logs.html  modules.html  playground.html  problem.html  providers.html  routes.html  schedules.html  usage.html  workflow.html
guests/approval/: Cargo.toml
guests/approval/src/: bindings.rs  lib.rs
guests/burn-fn/: Cargo.toml
guests/burn-fn/src/: bindings.rs  lib.rs
guests/counter/: Cargo.toml
guests/counter/src/: lib.rs
guests/demo/: Cargo.toml
guests/demo/src/: bindings.rs  lib.rs
guests/echo-fn/: Cargo.toml
guests/echo-fn/src/: lib.rs
guests/effects/: Cargo.toml
guests/effects/src/: bindings.rs  lib.rs
guests/hog-solver/: Cargo.toml
guests/hog-solver/src/: bindings.rs  lib.rs
guests/kvcfg-fn/: Cargo.toml
guests/kvcfg-fn/src/: bindings.rs  lib.rs
guests/kvup/: Cargo.toml
guests/kvup/src/: lib.rs
guests/kvup2/: Cargo.toml
guests/kvup2/src/: bindings.rs  lib.rs
guests/loadgen/: Cargo.toml
guests/loadgen/src/: lib.rs
guests/loop-solver/: Cargo.toml
guests/loop-solver/src/: lib.rs
guests/providerdemo/: Cargo.toml
guests/providerdemo/src/: bindings.rs  lib.rs
guests/proxy-echo/: Cargo.toml
guests/proxy-echo/src/: bindings.rs  lib.rs
guests/proxy-echo/wit/: world.wit
guests/proxy-out/: Cargo.toml
guests/proxy-out/src/: bindings.rs  lib.rs
guests/proxy-out/wit/: world.wit
guests/relay/: Cargo.toml
guests/relay/src/: lib.rs
guests/secrets/: Cargo.toml
guests/secrets/src/: bindings.rs  lib.rs
guests/spin/: Cargo.toml
guests/spin/src/: bindings.rs  lib.rs
guests/starter-fn/: Cargo.toml
guests/starter-fn/src/: lib.rs
guests/sum-solver/: Cargo.toml
guests/sum-solver/src/: lib.rs
provider-wit/: provider.wit
providers/greet/: Cargo.toml
providers/greet/src/: bindings.rs  lib.rs
providers/relay/: Cargo.toml
providers/relay/src/: bindings.rs  lib.rs
scripts/: accept_cli.sh  accept_ecosystem.sh  accept_functions2.sh  accept_harden.sh  accept_hardv41.sh  accept_operate.sh  accept_phase1.sh  accept_phase2.sh  accept_phase3.sh  accept_phase4.sh  accept_phase5.sh  accept_phase6.sh  accept_polish.sh  forge_zipbomb.py  hang_stub.py  load_test.sh  smoke_auth.sh  smoke_cancel.sh  smoke_dr.sh  smoke_effects.sh  smoke_embedded.sh  smoke_fleet.sh  smoke_kv_upgrade.sh  smoke_provider_registry.sh  smoke_providers.sh  smoke_providers_effectful.sh  smoke_secrets.sh  stub_server.py
scripts/stub/: body.txt
wit/: workflow.wit
wit-wasi-keyvalue/: world.wit
