[workspace]
members = ["engine"]
resolver = "2"
# guests are built separately with `cargo component`, not as workspace members,
# because they target wasm32-unknown-unknown. Keep them OUT of [members].
# `exclude` is required on top of that: without it, cargo refuses to build the
# nested guest packages ("package is not a member of the workspace").
exclude = ["guests"]
