# keel-core — the embeddable durable-execution engine (v2.2 crate split).
# Everything journal-shaped lives here: schema, replay, the wasmtime host,
# worker threads, schedule math, providers. The `keel` binary (../engine) is
# one consumer; examples/embedded.rs shows the in-process story.

[package]
name = "keel-core"
version = "0.1.0"
edition = "2021"

[dependencies]
wasmtime = { version = "43", features = ["component-model"] }
rusqlite = { version = "0.32", features = ["bundled", "backup"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
ureq = { version = "2", features = ["tls"] }
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
