# keel-core — the embeddable durable-execution engine (v2.2 crate split).
# Everything journal-shaped lives here: schema, replay, the wasmtime host,
# worker threads, schedule math, providers. The `keel` binary (../engine) is
# one consumer; examples/embedded.rs shows the in-process story.

[package]
name = "keel-core"
version = "0.1.0"
edition = "2021"

[dependencies]
wasmtime = { version = "43", features = ["component-model"] }
rusqlite = { version = "0.32", features = ["bundled", "backup"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
ureq = { version = "2", features = ["tls"] }
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
# v3.3 (status.md §P P-FIX-2) — sync only: Semaphore for the data-plane and
# judge concurrency caps. Runtime-independent; the core stays thread-based.
tokio = { version = "1", features = ["sync"] }
# v4.0 (SPEC-AMENDMENT-3.md E1) — the ONE deliberate wasi dependency family:
# the reference host implementation of wasi:io/clocks/random/cli streams and
# the wasi:http types, linked ONLY into the proxy compatibility path. The
# keel-WIT worlds stay hand-rolled. Sync bindings on the one existing engine.
wasmtime-wasi = "43"
wasmtime-wasi-http = "43"
http = "1"
hyper = "1"
http-body-util = "0.1"
bytes = "1"
