# The `keel` binary: HTTP API + UI + auth + fleet + the serve-time loops
# (scheduler, backups, GC), all on top of the keel-core library (../core) —
# the v2.2 crate split. Everything journal-shaped lives in keel-core.

[package]
name = "keel-engine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "keel"
path = "src/main.rs"

# Versions are the spec's known-good minimums (SPEC.md §3). Rule 5: if one stops
# resolving, bump to latest stable and note it in status.md.
[dependencies]
keel-core = { path = "../core" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
axum = { version = "0.8", features = ["multipart"] }   # multipart needed for the
                                                        # phase-2 module upload form
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
# Micro-cloud phase 6 — app asset bundles (zip upload) + content types.
# Amendment 1 (A4): the CLI also WRITES zips (keel deploy).
zip = { version = "2", default-features = false, features = ["deflate"] }
mime_guess = "2"
# Amendment 1 (A4) — the client CLI verbs talk to a running engine over HTTP.
# Same crate+version core already uses for the http-request host call.
ureq = { version = "2", features = ["tls"] }
clap = { version = "4", features = ["derive", "env"] }   # env: KEEL_API_TOKEN (v1.1 auth)
askama = "0.12"          # phase 2 (templates); unused until Task 2.8
tracing = "0.1"
tracing-subscriber = "0.3"
toml = "0.8"             # v2 fleet: tenants config file

# v2.4 — OTel traces, strictly opt-in (`--features otel`): the default binary
# carries none of this. Spans come from tracing macros in keel-core (workflow
# runs, journaled host calls); this feature just exports them via OTLP/http.
opentelemetry = { version = "0.32.0", optional = true }
opentelemetry_sdk = { version = "0.32.1", optional = true }
tracing-opentelemetry = { version = "0.33.0", optional = true }
opentelemetry-otlp = { version = "0.32.0", features = ["http-proto", "reqwest-blocking-client"], optional = true }

[features]
otel = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:tracing-opentelemetry",
    "dep:opentelemetry-otlp",
]
