# v2.1 acceptance guest — exercises the secret host call end to end: read a
# secret, send it in an http-request header (the JOURNAL must hold only a
# {{secret:...}} placeholder while the stub receives the real value), sleep
# across scripts/smoke_secrets.sh's kill -9, re-read the secret after
# recovery. The same guest, crashed and then replayed against a ROTATED
# secrets file, must fail loudly instead of resuming.
#
# Build with:  cargo component build --release --target wasm32-unknown-unknown

[package]
name = "secrets"
version = "0.1.0"
edition = "2021"

[dependencies]
# version matches what cargo-component 0.21.1 generates bindings for
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }
serde_json = "1"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "keel:secrets"

[package.metadata.component.target]
path = "../../wit"
world = "workflow"
