# Cancel-me fixture (post-review hardening) — a guest that spins in pure wasm
# forever and never parks. Exists to exercise the epoch-interruption cancel path
# (scripts/smoke_cancel.sh): the park-loop abort flag can never catch this guest.
#
# Build with:  cargo component build --release --target wasm32-unknown-unknown

[package]
name = "spin"
version = "0.1.0"
edition = "2021"

[dependencies]
# version matches what cargo-component 0.21.1 generates bindings for
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "keel:spin"

[package.metadata.component.target]
path = "../../wit"
world = "workflow"
